 - fixed multiple primary mail accounts (goffy)
 - keep filter cats when editing event (goffy)
 - fixed problems with smtp mail accounts (goffy)
 - added new checks/cleaning in maintenance (goffy)
 - added export as excel or ics (goffy)
 - implementation image for cats (goffy)
 - implementation of image editor (goffy)
 - fixed problems image editor for events of other users (goffy)

==============================================================
1.0.4 RC1 [2022/08/29]
==============================================================
 - implement multiple fees for different participants (goffy)
 - removed unused tpl (goffy)
 - add year to identifier (goffy)
 - fixed bug with redirect to questions (goffy)
 - added cat selection with buttons (goffy)
 - fixed bug with groups (goffy)
 - optional identifier (goffy)
 - added goto form in simplecalendar (goffy)
 - fixed bug with missing limit (goffy)
 - fixed bug with groups on index page (goffy)
 - fixed bug in none working "required" for custom question (goffy)
 - fixed bug with multiple checkboxes (goffy)

==============================================================
1.0.3 RC1 [2022/07/10]
==============================================================
 - implemented google maps in calendar and list view (goffy)
 - implemented import for apcal (goffy)
 - implemented import for extcal (goffy)
 - implemented group permissions (goffy)
 - new maintenance for table registration (goffy)
 - implemented clone feature fo events (goffy)
 - adapted update due to new semantic versioning (goffy)
 - fixed bug in MigrateHelper (goffy)
 - implemented deletion of imported events (goffy)

==============================================================
1.0.2 [2022/06/17]
==============================================================
 - added paid amount (goffy)
 - added ajax support for most used functions (goffy)
 - added history lists (registrations, answers) in admin area (goffy)
 - implemented tablesorter in list of registrations (goffy)