@@ -17,7 +17,7 @@
             </div>
             <div class='panel-body'>
                 <div class="row">
-                    <{if $event.logo|default:false}>
+                    <{if $event.logo|default:false && $event.logo|default:false != 'blank.gif'}>
                         <div class="col-xs-12 col-sm-2">
                             <{if $event.logoExist|default:false}>
                                 <img class="img-responsive img-fluid wge-event-block-img" src='<{$wgevents_upload_eventlogos_url|default:false}>/<{$event.submitter}>/<{$event.logo}>' alt='<{$event.name_clean|default:''}>' title='<{$event.name_clean|default:''}>' >
@@ -26,15 +26,16 @@
                         <div class="col-xs-12 col-sm-6 wge-panel-details1 left expander">
                     <{else}>
                         <div class="col-xs-12 col-sm-8 wge-panel-details1 left expander">
-                            <{/if}>
-                            <{$event.desc_text|default:''}></div>
+                    <{/if}>
+                            <{$event.desc_text|default:''}>
+                        </div>
                         <div class="col-xs-12 col-sm-4 wge-panel-details2 right">
                             <{if $event.allday_single|default:false}>
-                            <p><{$event.datefrom_text}></p>
-                            <{else}>
-                            <p><{$smarty.const._MA_WGEVENTS_EVENT_DATEFROM}>: <{$event.datefrom_text}><br>
-                                <{$smarty.const._MA_WGEVENTS_EVENT_DATETO}>: <{$event.dateto_text}></p>
-                    <{/if}>
+                                <p><{$event.datefrom_text}></p>
+                                <{else}>
+                                <p><{$smarty.const._MA_WGEVENTS_EVENT_DATEFROM}>: <{$event.datefrom_dayname}><{$event.datefrom_text}><br>
+                                    <{$smarty.const._MA_WGEVENTS_EVENT_DATETO}>: <{$event.dateto_dayname}><{$event.dateto_text}></p>
+                            <{/if}>
                         </div>
                     </div>
                 </div>
@@ -73,4 +74,9 @@
         </div>
     <{/foreach}>
 <{/if}>
-<div class="col-xs-12 col-12 center wge-block-footer"><a class="btn btn-primary" href='<{$wgevents_url|default:false}>/event.php?op=list' title='<{$smarty.const._MB_WGEVENTS_EVENT_SHOWMORE}>'><{$smarty.const._MB_WGEVENTS_EVENT_SHOWMORE}></a></div>
+<div class="col-xs-12 col-12 center wge-block-footer">
+    <a class="btn btn-success wge-panel-btn-showmore" href='<{$wgevents_url|default:false}>/event.php?op=list' title='<{$smarty.const._MB_WGEVENTS_EVENT_SHOWMORE}>'><{$smarty.const._MB_WGEVENTS_EVENT_SHOWMORE}></a>
+    <{if $wgevents_permAdd|default:false}>
+        <a class='btn btn-primary' href='<{$wgevents_url|default:false}>/event.php?op=new' title='<{$event.summary}>'><{$smarty.const._MA_WGEVENTS_EVENT_ADD}></a>
+    <{/if}>
+</div>
