@@ -28,8 +28,8 @@
                 <{if $event.allday_single|default:false}>
                     <p><{$event.datefrom_text}></p>
                 <{else}>
-                    <p><{$smarty.const._MA_WGEVENTS_EVENT_DATEFROM}>: <{$event.datefrom_text}><br>
-                        <{$smarty.const._MA_WGEVENTS_EVENT_DATETO}>: <{$event.dateto_text}></p>
+                    <p><{$smarty.const._MA_WGEVENTS_EVENT_DATEFROM}>: <{$event.datefrom_dayname}><{$event.datefrom_text}><br>
+                        <{$smarty.const._MA_WGEVENTS_EVENT_DATETO}>: <{$event.dateto_dayname}><{$event.dateto_text}></p>
                 <{/if}>
             </div>
         </div>
